about me section updated

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="about" id="about">
         <div class="about-container">
             <h1>About Us</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore quis dignissimos ipsum possimus perspiciatis, vel voluptatem tenetur incidunt modi magni? Aut distinctio quasi ipsum laboriosam vel temporibus expedita, non dolor eaque adipisci, animi doloribus aliquam quod! Fugiat corrupti commodi magnam, error, repudiandae, consectetur nostrum amet deleniti reprehenderit dicta laboriosam quae.</p>
+            <p>Est 2021. Professional and Fast solutions for I.T. problems. Marshall Computer Support owner is run by Harry Marshall, a currently studying I.T. student with a passion for assisting all with there information technology problems.</p>
         </div>
         <div class="contact" id="contact">
             <h1>Contact</h1>
