--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#pricing">Pricing</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bars"></span>
@@ -100,6 +103,24 @@
                 <span class="fa fa-envelope-o"></span>harryyymarshall@gmail.com
             </div>
         </form>
+    </section>
+
+    <section class="pricing" id="pricing">
+        <h2>Pricing</h2>
+        <div class="pricing-grid">
+            <div></div>
+            <div class="pricing-phone">
+                <h2>On Phone</h2>
+                <p>$35 per 30 minutes consultation.</p>
+                <i class="fa-solid fa-phone"></i>
+            </div>
+            <div class="pricing-in-person">
+                <h2>In Person</h2>
+                <p>$50 call out. If problem isnt solvable right there. We will quote a return to the factory pricing repair.</p>
+                <i class="fa-solid fa-laptop-code"></i>
+            </div>
+            <div></div>
+        </div>
     </section>
 
     <footer>
