--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <section class="hero">
-        <h1>Fixes for all information technology problems</h1>
+        <h1>Fixing all information technology problems</h1>
         <p>Competitive pricing with flat rates</p>
         <a href="#contact"><button>Reach Out</button></a>
         <img src="img/hero.png" alt="">
@@ -51,7 +51,7 @@
         <div class="services-col">
             <div class="services-panel left">
                 <h2>Problem Diagnosis</h2>
-                <p>Over the phone consultation of the problem. Reaching a plan a to begin the journey to the solution.</p>
+                <p>Over the phone consultation of the problem. Reaching a plan to begin the journey to the solution.</p>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
             </div>
             <div class="services-panel mid">
@@ -65,7 +65,7 @@
             </div>
             <div class="services-panel right">
                 <h2>Delivery</h2>
-                <p>On-site at your house repairs. We will come to you and if cannot be fixed on-site. Take back to the factory to do it there.</p>
+                <p>On-site at your house repairs. We will come to you and if cannot be fixed on-site. We will take back to the factory to do it there.</p>
                 <i class="fa-solid fa-truck"></i>
             </div>
         </div>  
@@ -74,7 +74,7 @@
     <section class="about" id="about">
         <div class="about-container">
             <h1>About Us</h1>
-            <p>Est 2021. Professional and Fast solutions for I.T. problems. Marshall Computer Support owner is run by Harry Marshall, a currently studying I.T. student with a passion for assisting all with there information technology problems.</p>
+            <p>Est 2021. Professional and Fast solutions for I.T. problems. Marshall Computer Support, owner is run by Harry Marshall, a currently studying I.T. student with a passion for assisting all with there information technology problems.</p>
         </div>
         <div class="contact" id="contact">
             <h1>Contact</h1>
@@ -116,7 +116,7 @@
             </div>
             <div class="pricing-in-person">
                 <h2>In Person</h2>
-                <p>$50 call out. If problem isnt solvable right there. We will quote a return to the factory pricing repair.</p>
+                <p>$50 call out. If problem isnt solvable right there. We will quote a return to the factory repair price.</p>
                 <i class="fa-solid fa-laptop-code"></i>
             </div>
             <div></div>
