--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="about" id="about">
         <div class="about-container">
             <h1>About Us</h1>
-            <p>Est 2021. Professional and Fast solutions for I.T. problems. Marshall Computer Support, owner is run by Harry Marshall, a currently studying I.T. student with a passion for assisting all with there information technology problems.</p>
+            <p>Est 2021. Professional and Fast solutions for I.T. problems. Marshall Computer Support, owner is Harry Marshall, a currently studying I.T. student with a passion for assisting all with there information technology problems.</p>
         </div>
         <div class="contact" id="contact">
             <h1>Contact</h1>
